# vm

./: Makefile.am  Makefile.in  README.md  aclocal.m4  bootstrap  config-h.in  configure  configure.in
config/: Make-rules  ac_caolan_func_which_gethostbyname_r.m4
debug/sym/: Makefile  OCamlMakefile  main.ml
trans/: asmpp.awk  vmas  vmas.awk  vmgcc  vmgcc.awk
vmm/: Makefile.am  Makefile.in  comm.h  common.h  ia32.h  std.h
vmm/comm/: Makefile.am  Makefile.in  comm.c  conf.c  conf.h  conf_common.h  msg.c  msg.h  msg_common.h
vmm/gui/: Makefile.am  Makefile.in  main.c
vmm/ia32/: Makefile.am  Makefile.in  cpu.c  cpu.h  cpu_common.h  descr.c  descr.h  descr_common.h  interrupt.c  interrupt.h  interrupt_common.h  maccess.c  maccess.h  maccess_common.h  paging.c  paging.h  paging_common.h  regs.c  regs.h  regs_common.h  tasking.c  tasking.h  tasking_common.h
vmm/launcher/: Makefile.am  Makefile.in  main.c
vmm/log-analyzer/: Makefile.am  Makefile.in  memfoot.c  tdistr.c
vmm/mon/: Makefile.am  Makefile.in  apic.c  apic.h  arith.c  bit.c  ctrl_xfer.c  data_xfer.c  decode.c  dev.c  dev.h  flag_ctrl.c  guest.c  guest.h  hard_drive.c  hard_drive.h  init.c  instr.c  instr.h  io.c  logical.c  main.c  mhandler.c  mon.h  mon_maccess.c  mon_print.c  pci.c  pci.h  pic.c  pic.h  pit.c  pit.h  proc_ctrl.c  protect_ctrl.c  rtc.c  rtc.h  segment_ctrl.c  serial.c  serial.h  shift.c  (+8 more)
vmm/std/: Makefile.am  Makefile.in  bits.h  debug.c  debug.h  debug_common.h  fptr.c  fptr.h  fptr_common.h  in_addr.c  in_addr.h  io.c  io.h  mem.c  mem.h  net.c  net.h  num.c  num.h  print.c  print.h  print_common.h  pthrd.c  pthrd.h  sig.c  sig.h  sig_common.h  str.c  str.h  sys_trace.c  sys_trace.h  timespec.c  timespec.h  timespec_common.h  types.h  unix.c  unix.h
vmm/vm/: Makefile.am  Makefile.in  init.c  linker_script  main.c  vm.h  vm_maccess.c
