dnl Process this file with autoconf to produce a configure script.

AC_INIT()
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(vmm/config.h:config-h.in)
AM_MAINTAINER_MODE

PACKAGE=vm
VERSION=1.0
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
# AC_PROG_RANLIB
AM_PROG_CC_STDC
AM_PROG_LIBTOOL

# Checks for libraries.
AC_CHECK_LIB(socket, main)
AC_CHECK_LIB(nsl, main)
AC_CHECK_LIB(pthread, main)
# AC_CHECK_LIB(curses, main)

# Checks for header files.


# Checks for typedefs, structures, and compiler characteristics.


# Checks for gethostbyname
AH_TEMPLATE([HAVE_FUNC_GETHOSTBYNAME_R_6], [])
AH_TEMPLATE([HAVE_FUNC_GETHOSTBYNAME_R_5], [])
AH_TEMPLATE([HAVE_FUNC_GETHOSTBYNAME_R_3], [])
AC_caolan_FUNC_WHICH_GETHOSTBYNAME_R

# Checks for library functions.

AC_CONFIG_FILES([Makefile
		vmm/Makefile
                vmm/std/Makefile
		vmm/ia32/Makefile
                vmm/comm/Makefile
		vmm/vm/Makefile
		vmm/mon/Makefile
		vmm/gui/Makefile
		vmm/log-analyzer/Makefile
		vmm/launcher/Makefile])
AC_OUTPUT
